--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-image: url("./images/dims.jpeg");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-weight: bolder;
+  font-size: calc(20px + 2vmin);
+  color: black;
 }
 
 .App-link {
